add estrutura css

--- a/assets/css/generic/reset.css
+++ b/assets/css/generic/reset.css
@@ -18,3 +18,17 @@ body {
   height: 100%;
   font-family: 'Poppins', sans-serif;
 }
+ul,
+ol,
+li {
+  list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 1em;
+}
