--- a/assets/css/base/initialize.css
+++ b/assets/css/base/initialize.css
@@ -1,15 +1,17 @@
 html {
   font-size: 62.5%; 
+  height: 100%;
 }
-/* Medium screens (640px) */
+/* Medium screens (640px)
 @media (min-width: 40rem) {
   html { font-size: 112%; }
 }
 
 /* Large screens (1024px) */
-@media (min-width: 64rem) {
+/* @media (min-width: 64rem) {
   html { font-size: 120%; }
-}
+} */ */
+
 body {
   min-height: 100vh;
   text-rendering: optimizeLegibility;
