--- a/assets/css/components/dooutss-information.css
+++ b/assets/css/components/dooutss-information.css
@@ -6,10 +6,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    padding: var(--spacing-very) var(--spacing-container-left);
     background-image: url('../../img/bg-intro.png');
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 100% 100%;
-    
+    background-size: 100% 100%;  
 }
