--- a/assets/css/components/wrapper-information.css
+++ b/assets/css/components/wrapper-information.css
@@ -1,21 +1,63 @@
-.wrapper-information{
+.wrapper-information {
+    position: relative;
+    display: flex;
+    flex-direction: column;
     flex: 0 0 100%;
     width: 100%;
 }
-.wrapper-information .title{
- max-width: 350px;
- color: var(--color-zero);
- font-size: 3.6rem;
- margin-bottom: var(--spacing-small);
+
+.wrapper-information .title {
+    width: 100%;
+    max-width: 550px;
+    color: var(--color-zero);
+    font-size: 3.6rem;
+    line-height: 1.4;
+    margin-bottom: var(--spacing-small);
 }
-.wrapper-information .subtitle{
-    max-width: 450px;
+
+.wrapper-information .subtitle {
+    width: 100%;
+    max-width: 650px;
     color: var(--color-zero);
     font-size: 1.6rem;
+    line-height: 1.4;
+    font-weight: 300;
     letter-spacing: .1rem;
-    margin-bottom: var
-    (--spacing-small);
+    margin-bottom: var(--spacing-small);
 }
-.wrapper-information .btn{
 
+.wrapper-information .btn {
+    position: relative;
+    max-width: 400px;
+    padding: var(--spacing-very) var(--spacing-small);
+    font-size: 1.8rem;
+    line-height: 1.4;
+    font-weight: normal;
+    text-align: center;
+    color: #000;
+    background-color: #fff;
+    border-radius: 25px;
+    box-shadow: 0px 1px 1px 0px rgba(68, 68, 68, 0.8);
+    cursor: pointer;
+}.wrapper-information .btn::after {
+    content: '';
+    position: absolute;
+    display: none;
+    top: 25%;
+    right: 5%;
+    margin: auto;
+    background-image: url('../../img/arrow.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    width: 30px;
+    height: 20px; 
+}
+@media screen and (min-width: 380px){
+    .wrapper-information .btn{
+        text-align-last: left;
+    }
+    .wrapper-information .btn::after{
+        display: inline-block;
+    }
 }
