--- a/assets/css/components/wrapper-information.css
+++ b/assets/css/components/wrapper-information.css
@@ -23,13 +23,14 @@
     line-height: 1.4;
     font-weight: 300;
     letter-spacing: .1rem;
-    margin-bottom: var(--spacing-small);
+    margin-bottom: var(--spacing-big);
 }
 
 .wrapper-information .btn {
     position: relative;
-    max-width: 400px;
+    max-width: 320px;
     padding: var(--spacing-very) var(--spacing-small);
+    margin-bottom: var(--spacing-big);
     font-size: 1.8rem;
     line-height: 1.4;
     font-weight: normal;
@@ -59,5 +60,10 @@
     }
     .wrapper-information .btn::after{
         display: inline-block;
+    }
+}
+@media screen and (min-width: 480px){
+    .wrapper-information .btn{
+        max-width: 400px;
     }
 }
