--- a/assets/css/components/wrapper-social.css
+++ b/assets/css/components/wrapper-social.css
@@ -4,7 +4,11 @@
     justify-content: center;
     align-items: center;
 }
-
+@media screen and (min-width: 380px){
+    .wrapper-social{
+        justify-content: flex-start;
+    }
+}
 .wrapper-social .networks {
     width: 40px;
     height: 40px;
@@ -12,6 +16,26 @@
     margin: 0 15px;
     border: 1px solid #fff;
     border-radius: 50%;
+    cursor: pointer;
+    transition: all 1s;
+}
+.wrapper-social .networks:hover{
+    /* width: 45px;
+    height: 45px;
+    margin: 0 15px; */
+    
+}
+.wrapper-social .networks.-facebook:hover {
+    background: rgb(12, 31, 199);
+}
+.wrapper-social .networks.-twitter:hover {
+    background: rgb(95, 133, 236);
+}
+.wrapper-social .networks.-dribble:hover {
+    background: rgb(97, 175, 238);
+}
+.wrapper-social .networks.-instragam:hover {
+    background: rgb(223, 10, 10);
 }
 
 .wrapper-social .social {
@@ -20,14 +44,26 @@
     height: 20px;
     margin: 0 auto;
     background-position: center center;
+    background-repeat: no-repeat;
+    transition: all 1s;
 }
+
 
 .wrapper-social .social.-facebook {
     background-image: url('../../img/facebook.svg');
 }
 
-.wrapper-social .social.-twitter {}
+.wrapper-social .social.-twitter {
+    background-image: url('../../img/twitter.svg');
+}
 
-.wrapper-social .social.-dribble {}
+.wrapper-social .social.-dribble {
+    background-image: url('../../img/dribbble.svg');
+}
 
-.wrapper-social .social.-instragam {}
+.wrapper-social .social.-instragam {
+    background-image: url('../../img/instagram.svg');
+}
+.wrapper-social .networks:hover > .social {
+    transform: rotate(360deg);
+}
